# Makefile.am
themedir = $(datadir)/icons/hicolor
size = 22x22
context = apps

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = \
	spritehut.png

EXTRA_DIST = \
	$(icons_DATA)

# tools
toolscontext = actions

toolsdir = $(themedir)/$(size)/$(toolscontext)

tools_DATA = \
	tools/color-fill.png \
	tools/color-picker.png \
	tools/draw-freehand.png \
	tools/draw-eraser.png \
	tools/select-rectangular.png

toolsEXTRA_DIST = \
	$(tools_DATA)
